add acceptance of shared notes
